--- a/curso-git/index.html
+++ b/curso-git/index.html
@@ -1,8 +1,9 @@
 <html>
-	//*<head link href="css/estilo.css" rel="stylesheet">>
+	<head>
+	<link href="css/estilo.css" rel="stylesheet">>
 		<title> Curso Git Hub</title>
 	<body>
-		
+		Sistema corpo 
 	</body>
 	</head>
 </html>
