--- a/curso-git/index.html
+++ b/curso-git/index.html
@@ -1,9 +1,10 @@
 <html>
 	<head>
-	<link href="css/estilo.css" rel="stylesheet">>
+	<link href="css/estilo.css" rel="stylesheet">
 		<title> Curso Git Hub</title>
 	<body>
-		Sistema corpo 
+		 Aqui é o corpo do Ssietama
 	</body>
+		Aqui é o rodapé
 	</head>
 </html>
