--- a/curso-logica/programa.html
+++ b/curso-logica/programa.html
@@ -1,16 +1,20 @@
 <meta charset="UTF-8">
 
 <script>
-	var puloLinha = "<br><br>";
-    var ano = 2016;
+	function pulaLinha(){
+
+		document.write("<br>");
+	}
+
+    var ano = 2018;
 
     document.write("Flávio tem " + (ano - 1977) + " anos");
-    document.write(puloLinha);
+    pulaLinha();
     document.write("Joaquim tem " + (ano - 1996) + " anos");
-    document.write(puloLinha);
+    pulaLinha();
 
-    ano = 2017;
+    ano = 2019;
     document.write("Barney tem " + (ano - 1976) + " anos");
-    document.write(puloLinha);
+    pulaLinha();
 
 </script>
