--- a/curso-logica/programa.html
+++ b/curso-logica/programa.html
@@ -6,15 +6,17 @@
 		document.write("<br>");
 	}
 
+	function mostra(frase){
+
+		document.write(frase);
+		pulaLinha();
+	}
+
     var ano = 2018;
-
-    document.write("Flávio tem " + (ano - 1977) + " anos");
-    pulaLinha();
-    document.write("Joaquim tem " + (ano - 1996) + " anos");
-    pulaLinha();
-
+    mostra("Flávio tem " + (ano - 1977) + " anos");
+    mostra("Joaquim tem " + (ano - 1996) + " anos");
     ano = 2019;
-    document.write("Barney tem " + (ano - 1976) + " anos");
-    pulaLinha();
+    mostra("Barney tem " + (ano - 1976) + " anos");
+ 
 
 </script>
