--- a/curso-logica/exercicio_aula_quatro.html
+++ b/curso-logica/exercicio_aula_quatro.html
@@ -23,4 +23,13 @@
 
 	idadeDiferenca();
 
+	function geracao() {
+		
+		var anoAtual = 2018;
+		somaGeracoes = (anoAtual - 1500)/28;
+		mostra("Quantas Gerações Passaram: " + somaGeracoes);
+		pulaLinha();
+	}
+	geracao();
+
 </script>
