--- a/curso-logica/exercicio_aula_quatro.html
+++ b/curso-logica/exercicio_aula_quatro.html
@@ -6,7 +6,7 @@
 	var somaIdades = idadeIrmao - idadeMinha;
 	function mostra(frase) {
 		
-		document.write(frase);
+		document.write("<big>"+frase+"</big>");
 
 	}
 	function pulaLinha() {
