--- a/curso-logica/programa_aula_tres.html
+++ b/curso-logica/programa_aula_tres.html
@@ -3,13 +3,13 @@
 
 	<script>
 		var ano = 2018;
+		var puloLinha = "<br>";
 
 	    document.write("Flávio tem " + (ano - 1977) + " anos");
-	    document.write("<br>");
 	    document.write("Joaquim tem " + (ano - 1996) + " anos");
-	    document.write("<br>");
+	    document.write(puloLinha);
 	    document.write("Barney tem " + (ano - 1976) + " anos");
-	    document.write("<br>");
+	    document.write(puloLinha);
 
 	</script>
 </html>
