calculo Imc com return

--- a/curso-logica/calculoImc.html
+++ b/curso-logica/calculoImc.html
@@ -16,10 +16,13 @@
 	function calcularImc(peso, altura){
 	
 		var calculoImc = peso /(altura * altura);
-		mostra("IMC calculado é: " +calculoImc);
-		pulaLinha();
+		return calculoImc;
+		
+		
 	}
-	calcularImc(93,1.81);
-	calcularImc(117,1.81);
+	var imcRodrigo = calcularImc(93,1.81);
+	var imcJanpaolo = calcularImc(117,1.81);
+	mostra("IMC calculado é: " +imcRodrigo);
+	mostra("IMC calculado é: " +imcJanpaolo);
 	
 </script>
