--- a/curso-logica/calculoImc.html
+++ b/curso-logica/calculoImc.html
@@ -24,5 +24,6 @@
 	var imcJanpaolo = calcularImc(117,1.81);
 	mostra("IMC calculado é: " +imcRodrigo);
 	mostra("IMC calculado é: " +imcJanpaolo);
-	
+
+	mostra("Soma dos IMS's é: "+ (imcRodrigo + imcJanpaolo));
 </script>
